hali uzgarishlar yuq

--- a/members.html
+++ b/members.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <section>
-        <!-- html -->
+        <img src="https://cdn.pixabay.com/photo/2022/01/21/07/39/rose-6954137_960_720.jpg" alt="">
+       <h1>salom</h1>
+
     </section>
 </body>
 </html>
