--- a/members.html
+++ b/members.html
@@ -1,14 +1,265 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <section>
-        <!-- html -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Fitnes</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/main.css" />
+  </head>
+  <body>
+    <section id="members" class="container-fluid">
+      <div class="row">
+        <div class="col">
+          <div id="header">
+            <a href="#" class="header_logo">
+              <img src="./assets/img/Logos/Logo_Turbosale.png" alt="" />
+            </a>
+            <div class="header_menu">
+              <div class="header_menu_icons">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-bell"></i>
+                <i class="fa-solid fa-envelope"></i>
+              </div>
+              <div class="header_menu_admin">
+                <img src="./assets/img/Avatar/MaxBeart.svg" alt="" />
+                <div class="header_menu_admin_text">
+                  <h4>Maxbert</h4>
+                  <p>Admin - Designspace</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-2" id="sidebar">
+          <img
+            class="sidebar_logo"
+            src="./assets/img/Logos/Logo_Fitnes.png"
+            class="sidebar_logo"
+            alt=""
+          />
+          <div class="sidebar_menu">
+            <a href="./Equipment.html" class="sidebar_link">
+              <img src="./assets/img/Logos/Equipment.svg" alt="" />
+              <p>Equipment</p>
+            </a>
+            <a href="./members.html" class="sidebar_link">
+              <img src="./assets/img/Logos/person_pin.svg" alt="" />
+              <p>Members</p>
+            </a>
+            <a href="./Products.html" class="sidebar_link">
+              <img src="./assets/img/Logos/Products.svg" alt="" />
+              <p>Products</p>
+            </a>
+            <a href="./Payments.html" class="sidebar_link active">
+              <img src="./assets/img/Logos/payments.svg" alt="" />
+              <p>Payments</p>
+            </a>
+            <a href="./Attendance.html" class="sidebar_link">
+              <img src="./assets/img/Logos/attendance.svg" alt="" />
+              <p>Attendance</p>
+            </a>
+            <a href="./Settings.html" class="sidebar_link">
+              <img src="./assets/img/Logos/settings.svg" alt="" />
+              <p>Settings</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-sm-10">
+          <!-- for members page  -->
+          
+          <div class="container">
+            <ul class="row members__menu">
+              <li class="col members__item members__wrapper">
+                <a href="#" class="members__link contact">
+                  <img src="./assets/png/Vectormembers.png" alt="members" />
+                </a>
+                <h2 class="member__text">24 members</h2>
+              </li>
+              <!-- <li class="col members__item">
+             <a href="#" class="members__link">
+             </a>
+           </li> -->
+              <li class="col members__item btn__wrapper">
+                <button class="btn">
+                  <span>
+                    <img src="./assets/png/Vectorplus.png" alt="add" />
+                  </span>
+                  <h3>new member</h3>
+                </button>
+              </li>
+            </ul>
+            <ul class="server__menu">
+              <li class="server__item name">
+                <input type="checkbox" for="full" class="checkbox" />
+                <a href="#" class="server__link full__name" id="full"
+                  >FULL NAME</a
+                >
+              </li>
+              <li class="server__item Address">
+                <a href="#" class="server__link">Address</a>
+              </li>
+              <li class="server__item Phone">
+                <a href="#" class="server__link">Phone</a>
+              </li>
+              <li class="server__item Status">
+                <a href="#" class="server__link">Status</a>
+              </li>
+              <li class="server__item Language">
+                <a href="#" class="server__link">Language</a>
+              </li>
+              <li class="server__item ACTION">
+                <a href="#" class="server__link">ACTION</a>
+              </li>
+            </ul>
+            <hr />
+
+            <ul class="table__menu">
+              <li class="table__item">
+                <div class="input__wrapper">
+                  <input type="checkbox" class="input" />
+                </div>
+                <div class="img__wrapper">
+                  <img src="./assets/svg/Avatar/Userprofile.png" />
+                </div>
+                <div class="name__wrapper">
+                  <h2>essia ward</h2>
+                  <p>lu@sa.co.uk</p>
+                </div>
+                <div class="adress__wrapper">
+                  <h2>Atlanta</h2>
+                  <p>United States</p>
+                </div>
+                <div class="phone__wrapper">
+                  <h2>Sebo Studio</h2>
+                </div>
+                <div class="btn__primary-wrapper">
+                  <button class="btn__primary">Active</button>
+                </div>
+                <div class="icon__wrapper">
+                  <img class="icon" src="./assets/png/Vectornext-icon.png" />
+                </div>
+              </li>
+              <hr />
+
+              <li class="table__item">
+                <div class="input__wrapper">
+                  <input type="checkbox" class="input" />
+                </div>
+                <div class="img__wrapper">
+                  <img src="./assets/svg/Avatar/Userprofile.png" />
+                </div>
+                <div class="name__wrapper">
+                  <h2>essia ward</h2>
+                  <p>lu@sa.co.uk</p>
+                </div>
+                <div class="adress__wrapper">
+                  <h2>Atlanta</h2>
+                  <p>United States</p>
+                </div>
+                <div class="phone__wrapper">
+                  <h2>Sebo Studio</h2>
+                </div>
+                <div class="btn__primary-wrapper">
+                  <button class="btn__primary">Active</button>
+                </div>
+                <div class="icon__wrapper">
+                  <img class="icon" src="./assets/png/Vectornext-icon.png" />
+                </div>
+              </li>
+              <hr />
+              <li class="table__item">
+                <div class="input__wrapper">
+                  <input type="checkbox" class="input" />
+                </div>
+                <div class="img__wrapper">
+                  <img src="./assets/svg/Avatar/Userprofile.png" />
+                </div>
+                <div class="name__wrapper">
+                  <h2>essia ward</h2>
+                  <p>lu@sa.co.uk</p>
+                </div>
+                <div class="adress__wrapper">
+                  <h2>Atlanta</h2>
+                  <p>United States</p>
+                </div>
+                <div class="phone__wrapper">
+                  <h2>Sebo Studio</h2>
+                </div>
+                <div class="btn__primary-wrapper">
+                  <button class="btn__warning">Inactive</button>
+                </div>
+                <div class="icon__wrapper">
+                  <img class="icon" src="./assets/png/Vectornext-icon.png" />
+                </div>
+              </li>
+              <hr />
+              <li class="table__item">
+                <div class="input__wrapper">
+                  <input type="checkbox" class="input" />
+                </div>
+                <div class="img__wrapper">
+                  <img src="./assets/svg/Avatar/Userprofile.png" />
+                </div>
+                <div class="name__wrapper">
+                  <h2>essia ward</h2>
+                  <p>lu@sa.co.uk</p>
+                </div>
+                <div class="adress__wrapper">
+                  <h2>Atlanta</h2>
+                  <p>United States</p>
+                </div>
+                <div class="phone__wrapper">
+                  <h2>Sebo Studio</h2>
+                </div>
+                <div class="btn__primary-wrapper">
+                  <button class="btn__primary">Active</button>
+                </div>
+                <div class="icon__wrapper">
+                  <img class="icon" src="./assets/png/Vectornext-icon.png" />
+                </div>
+              </li>
+              <hr />
+              <li class="table__item">
+                <div class="input__wrapper">
+                  <input type="checkbox" class="input" />
+                </div>
+                <div class="img__wrapper">
+                  <img src="./assets/svg/Avatar/Userprofile.png" />
+                </div>
+                <div class="name__wrapper">
+                  <h2>essia ward</h2>
+                  <p>lu@sa.co.uk</p>
+                </div>
+                <div class="adress__wrapper">
+                  <h2>Atlanta</h2>
+                  <p>United States</p>
+                </div>
+                <div class="phone__wrapper">
+                  <h2>Sebo Studio</h2>
+                </div>
+                <div class="btn__primary-wrapper">
+                  <button class="btn__primary">Active</button>
+                </div>
+                <div class="icon__wrapper">
+                  <img class="icon" src="./assets/png/Vectornext-icon.png" />
+                </div>
+              </li>
+              <hr />
+            </ul>
+          </div>
+          
+        </div>
+      </div>
     </section>
-</body>
+  </body>
 </html>
