--- a/members.html
+++ b/members.html
@@ -12,6 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
@@ -297,6 +298,57 @@
             </div>
           </div>
         </section>
+        <footer>
+          <div class="container">
+            <div class="row ">
+                <div class="col forma">
+                    <div class="row">
+                        <div class="col form__img">
+                            <img class="footer__logo" src="/dashboard-ui-development/assets/img/Logos/Logo_Turbosale.png">
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col"><h2 class="form__title">Welcome Back!</h2></div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="form-floating mb-3">
+                                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" >
+                                <label for="floatingInput">Email address</label>
+                              </div>
+                              <div class="form-floating mb-3">
+                                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                                <label for="floatingPassword">Password</label>
+                              </div>
+                              <button class="btn btn-primary mb-5">Sign in</button>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col ">
+                            <p>Don`t have account</p>
+                        </div>
+                        <div class="col">
+                            <a href="#">Register</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col forma__2">
+                    <div class="row">
+                        <div class="col">
+                            <img src="/assets/img/Sign in/dashbord.png" alt="">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h4>Connect and manage with your team!</h4>
+                            <p>Aziest Jordan is one of the biggest superstars to have immerged from the professional designer in world.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </footer>
       </main>
     </div>
   </body>
