--- a/attandace.html
+++ b/attandace.html
@@ -20,8 +20,12 @@
             <div class="row mt-5">
                 <div class="col">
                     <div class="attandace-btn-wrapper">
-                        <button class="btn attandace-btn">New Attandace</button>
-                        <button class="btn attandace-btn">Sign up</button>
+                       <div class="btn">
+                           <img src="./assets/Dovnload/button (1).svg" alt="">
+                       </div>
+                        <div class="btn attandace-btn">
+                            <img src="./assets/Dovnload/button.svg" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -29,29 +33,31 @@
                 <div class="col">
                     <table class="table">
                         <thead>
-                            <tr>
+                            <tr class="border-top"  style="height: 3rem;">
                                 <td scope="col">Number</td>
-                                <td scope="col">Ref</td>
+                                <td scope="col"></td>
                                 <td scope="col">To</td>
                                 <td scope="col">Date</td>
-                                <td scope="col">Dau Date</td>
+                                <td scope="col">Due Date</td>
                                 <td scope="col">Pait</td>
                                 <td scope="col">Due</td>
                                 <td scope="col">Status</td>
+                                <td scope="col"></td>
                             </tr>
                         </thead>
                         <tbody>
-                            <tr>
+                            <tr style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
-                                <th>P/O SRM08-12</th>
+                                <th >P/O SRM08-12</th>
                                 <td>Marin bike club</td>
                                 <th>25 Oct 2021</th>
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O 9711</th>
                                 <td>Myway University</td>
@@ -59,22 +65,21 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Draft</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O 9711</th>
                                 <td> Myway University</td>
                                 <th>25 Oct 2021</th>
                                 <th>03 Nov 2021</th>
-                                <th>0.00</th>
-                                </th>
-                                <th>234.00</th>
-                                </th>
+                                <th>0.00</th> 
+                                <th>234.00</th> 
+                                <th></th>  
                                 <th>Awaiti</th>
-                                </th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O Book</th>
                                 <td>Marin bike club</td>
@@ -82,9 +87,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O 9711</th>
                                 <td>Myway University</td>
@@ -92,9 +98,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O 9711</th>
                                 <td>Myway University</td>
@@ -102,9 +109,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Paid</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O -</th>
                                 <td>New Era of Design</td>
@@ -112,9 +120,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O Training</th>
                                 <td>New Era of Design</td>
@@ -122,9 +131,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O Workshop</th>
                                 <td>New Era of Design</td>
@@ -132,9 +142,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O Monthly Supprts</th>
                                 <td>NRex Orange</td>
@@ -142,9 +153,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O Ref MK815</th>
                                 <td>TV Thunder</td>
@@ -152,9 +164,10 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
-                            <tr>
+                            <tr  style="height: 3rem;">
                                 <th scope="row">INV-0012</th>
                                 <th>P/O YR RefW08-143</th>
                                 <td>New Era of Design</td>
@@ -162,6 +175,7 @@
                                 <th>03 Nov 2021</th>
                                 <th>0.00</th>
                                 <th>234.00</th>
+                                <th></th>
                                 <th>Awaiti</th>
                             </tr>
                         </tbody>
@@ -170,12 +184,12 @@
                 </div>
             </div>
             <div class="row align-item-center attandace-farm">
-                <div class="col col-1">
+                <div class="col col-2 col-md-2 col-lg-1">
                     <h5> Shoving</h5>
                 </div>
-                <div class="col col-1">
+                <div class="col col-2 col-md-2 col-lg-1">
                     <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+                        <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton1"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             25
                         </button>
@@ -186,15 +200,16 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col col-8">
+                <div class="col col-4 col-md-5 col-lg-8">
                     <h5>Item per page</h5>
                 </div>
-                <div class="col col-2">
+                <div class="col col-4 col-md-3 col-lg-2">
                     <h5>1 <span class="attandace-word"> 2</span> <span class="attandace-words">Next</span> End </h5>
                 </div>
             </div>
         </div>
     </section>
+    
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
