--- a/login.html
+++ b/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,12 +9,12 @@
     <link rel="stylesheet" href="/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
-    <footer>
-        <div class="container">
-            <div class="row ">
-                <div class="col forma">
-                    <div class="forma__wrapper">
+    <div class="container-fluid">
+        <div class="row ">
+            <div class="col-md-5 forma">
+                <div class="forma__wrapper">
                     <div class="row">
                         <div class="col form__img">
                             <img class="footer__logo" src="/assets/img/Logos/Path.png">
@@ -22,25 +23,30 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col"><h2 class="form__title">Welcome Back!</h2></div>
+                        <div class="col">
+                            <h2 class="form__title">Welcome Back!</h2>
+                        </div>
                     </div>
                     <div class="row">
                         <div class="col">
                             <div class="mb-3">
                                 <label for="exampleFormControlInput1" class="form-label">EMAIL</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                              </div>
-                              <div class="mb-3 ">
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="name@example.com">
+                            </div>
+                            <div class="mb-3 ">
                                 <label for="exampleFormControlInput1" class="form-label">PASSWORD</label>
-                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="*********">
-                              </div>
-                              <div>
-                                  <input type="checkbox" id="Eslabqol" value="Remember me" name="Remember me"> <label for="text" class="remember">Remember me</label>
-                              </div>
-                              <button  class="btn btn__primary mb-5">Sign in</button>
-                              <div>
-                                  <a href="#">Forgot Password?</a>
-                              </div>
+                                <input type="email" class="form-control" id="exampleFormControlInput1"
+                                    placeholder="*********">
+                            </div>
+                            <div>
+                                <input type="checkbox" id="Eslabqol" value="Remember me" name="Remember me"> <label
+                                    for="text" class="remember">Remember me</label>
+                            </div>
+                            <button class="btn btn__primary mb-5">Sign in</button>
+                            <div class="forgot">
+                                <a href="#">Forgot Password?</a>
+                            </div>
                         </div>
                     </div>
                     <div class="row register">
@@ -51,26 +57,20 @@
                             <a href="#">Register</a>
                         </div>
                     </div>
-                  </div>
-                </div>
-                <div class="col forma__2">
-                    <div class="forma__2-wrapper">
-                    <div class="row justify-content-center">
-                        <div class="col">
-                            <img src="/assets/img/Sign in/dashbord.png" alt="">
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <h4 class="form__2-title">Connect and manage with your team!</h4>
-                            <p class="form__2-text">Aziest Jordan is one of the biggest superstars to have immerged from the professional designer in world.</p>
-                        </div>
-                    </div>
-                   </div>
                 </div>
             </div>
+            <div class="col-md-7 forma__2">
+                            <img class="Dashboard__img" src="/assets/img/Sign in/dashbord.png" alt="">
+                        <div class="login_content">
+                            <h4 class="form__2-title">Connect and manage with your team!</h4>
+                            <p class="form__2-text">Aziest Jordan is one of the biggest superstars to have immerged from
+                                the professional designer in world.</p>
+                        </div>
+            </div>
         </div>
-    </footer>
-    
+    </div>
+
+
 </body>
+
 </html>
