:bug: muhammad nihoyat push qildi

--- a/members.html
+++ b/members.html
@@ -26,7 +26,7 @@
               alt=""
             />
             <div class="sidebar_menu">
-              <a href="./Equipment.html" class="sidebar_link">
+              <a href="./equipment.html" class="sidebar_link">
                 <img src="./assets/img/Logos/Equipment.svg" alt="" />
                 <p>Equipment</p>
               </a>
@@ -34,19 +34,19 @@
                 <img src="./assets/img/Logos/person_pin.svg" alt="" />
                 <p>Members</p>
               </a>
-              <a href="./Products.html" class="sidebar_link">
+              <a href="./products.html" class="sidebar_link">
                 <img src="./assets/img/Logos/Products.svg" alt="" />
                 <p>Products</p>
               </a>
-              <a href="./Payments.html" class="sidebar_link active">
+              <a href="./payments.html" class="sidebar_link active">
                 <img src="./assets/img/Logos/payments.svg" alt="" />
                 <p>Payments</p>
               </a>
-              <a href="./Attendance.html" class="sidebar_link">
+              <a href="./attendance.html" class="sidebar_link">
                 <img src="./assets/img/Logos/attendance.svg" alt="" />
                 <p>Attendance</p>
               </a>
-              <a href="./Settings.html" class="sidebar_link">
+              <a href="./settings.html" class="sidebar_link">
                 <img src="./assets/img/Logos/settings.svg" alt="" />
                 <p>Settings</p>
               </a>
